# puppet-openstack_extras

./: .fixtures.yml  .gitignore  .gitreview  .puppet-lint.rc  .zuul.yaml  CHANGELOG.md  CONTRIBUTING.rst  Gemfile  Modulefile  README.md  Rakefile  metadata.json  setup.cfg  tox.ini
examples/: redhat_repo.yaml
files/: RPM-GPG-KEY-RDO-Kilo
manifests/: auth_file.pp
manifests/pacemaker/: service.pp
releasenotes/notes/: add-redhat-repo-stream-param-e07601e273aad56c.yaml  add_centos_mirror-079eb2b38940f583.yaml  allow_change_uca_url-b855c119a693b583.yaml  bug-1969484-6e4864f8bcc56230.yaml  bug-1978332-8b223e30a7f30165.yaml  debian-repo-updates-4aee254ef80e8dd7.yaml  debian-uses-extrepo-a77c672920581e4e.yaml  deprecate-manage_epel-056acc6686886a4a.yaml  deprecate-pacemaker-service-b34268f01b39d676.yaml  deprecate-redhat-repo-manage-prio-429e39966b3f6f57.yaml  deprecate-tenant_name-d8feb61192e129f7.yaml  disable_epel-a07b06048465e7a1.yaml  fix-zed-release-99f23a977cc90e0c.yaml  mitaka-dece9d43a565e6cb.yaml  mitaka_features-6358feed90cd0b0b.yaml  mitaka_upgrade-79294b892d21dfc7.yaml  rdo-virt-a9fb3681cbc8419e.yaml  redhat-repo-cleanup-antelope-ca46c38bbf3ee957.yaml  remove-domain_name-2a9dee69a7334eab.yaml  remove-openrc-tenant_name-b3c39a6b1a758f05.yaml  remove-pacemaker-service-d1903561dea90fef.yaml  rename-to-domain_name-d7bc8a7b44c619c8.yaml  repo-debian-remove-manage_whz-73b1326b754dfe30.yaml  repo-redhat-deprecate-manage_virt-4a29a4b85390b4fc.yaml  (+7 more)
releasenotes/source/: conf.py  (+1 more)
spec/: spec_helper.rb
templates/: openrc.erb
types/: apiversion.pp  endpointtype.pp
(+25 files in other folders)
