[metadata]
name = puppet-openstack_extras
summary = Puppet module for OpenStack Openstack_extras
description_file =
    README.md
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/puppet-openstack-guide/latest
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
